--- a/views/detail.hbs
+++ b/views/detail.hbs
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row justify-content-center mt-5">
     <div class="col-5 col-md-8 col-lg-4">
-      <h2>請輸入支出</h2>
+      <h2>支出明細</h2>
     </div>
   </div>
   <div class="row justify-content-center mt-3">
@@ -12,7 +12,7 @@
           <label for="name" class="col-sm-2 col-form-label">名稱</label>
           <div class="col-sm-10">
             <input type="text" class="form-control" id="name" placeholder="請輸入名稱" name="name" minlength="2"
-              maxlength="25" required>
+              maxlength="25" value="{{ record.name }}" disabled>
           </div>
         </div>
 
@@ -20,20 +20,15 @@
           <label for="datepicker" class="col-sm-2 col-form-label">日期</label>
           <div class="col-sm-10">
             <input type="text" id="datepicker" name="date" class="form-control" placeholder="請選擇日期"
-              pattern="[0-9]{4}-[0-9]{2}-[0-9]{2}" title="請輸入西元年-月-日 ex: 2021-05-20" required>
+              pattern="[0-9]{4}/[0-9]{2}/[0-9]{2}" title="請輸入西元年/月/日 ex: 2021/05/20" value="{{ record.date }}" disabled>
           </div>
         </div>
 
         <div class="mb-3 row">
           <label for="category" class="col-sm-2 col-form-label">類別</label>
           <div class="col-sm-10">
-            <select class="form-select" aria-label=".form-select" name="category" id="category" required>
-              <option selected disabled>請選擇類別</option>
-              <option value="meals">餐飲食品 </option>
-              <option value="traffics">交通出行</option>
-              <option value="entertainments">休閒娛樂</option>
-              <option value="living">家居物業</option>
-              <option value="others">其他</option>
+            <select class="form-select" aria-label=".form-select" name="category" id="category" disabled>
+              <option selected>{{ record.category }}</option>
             </select>
           </div>
         </div>
@@ -41,12 +36,12 @@
           <label for="name" class="col-sm-2 col-form-label">金額</label>
           <div class="col-sm-10">
             <input type="number" class="form-control" id="amount" name="amount" min="1" max="100000000" required
-              placeholder="請輸入金額 1~100000000">
+              placeholder="請輸入金額 1~100000000" disabled value="{{ record.amount }}">
           </div>
         </div>
         <div class="d-flex justify-content-end">
           <a href="/" class="btn btn-secondary me-2">返回</a>
-          <button type="submit" class="btn btn-primary">新增</button>
+          <a href="/records/{{ record._id }}/edit" class="btn btn-primary">更改</a>
         </div>
       </form>
     </div>
