--- a/views/detail.hbs
+++ b/views/detail.hbs
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row justify-content-center mt-5">
     <div class="col-5 col-md-8 col-lg-4">
-      <h2>支出明細</h2>
+      <h2>顯示支出明細</h2>
     </div>
   </div>
   <div class="row justify-content-center mt-3">
@@ -39,11 +39,11 @@
               placeholder="請輸入金額 1~100000000" disabled value="{{ record.amount }}">
           </div>
         </div>
-        <div class="d-flex justify-content-end">
-          <a href="/" class="btn btn-secondary me-2">返回</a>
-          <a href="/records/{{ record._id }}/edit" class="btn btn-primary">更改</a>
-        </div>
       </form>
+      <div class="d-flex justify-content-end">
+        <a href="/" class="btn btn-secondary me-2">返回</a>
+        <a href="/records/{{ record._id }}/edit" class="btn btn-primary">更改</a>
+      </div>
     </div>
   </div>
 </div>
