--- a/views/edit.hbs
+++ b/views/edit.hbs
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row justify-content-center mt-5">
     <div class="col-5 col-md-8 col-lg-4">
-      <h2>支出明細修改</h2>
+      <h2>編輯支出明細</h2>
     </div>
   </div>
   <div class="row justify-content-center mt-3">
@@ -47,7 +47,7 @@
         </div>
         <div class="d-flex justify-content-end">
           <a href="/" class="btn btn-secondary me-2">返回</a>
-          <button type="submit" class="btn btn-success">修改</button>
+          <button type="submit" class="btn btn-success">確認修改</button>
         </div>
       </form>
     </div>
