--- a/views/index.hbs
+++ b/views/index.hbs
@@ -56,7 +56,7 @@
               <td>{{ this.amount }}</td>
               <td><a href="/records/{{ this._id }}/edit" class="btn btn-success">編輯</a></td>
               <td>
-                <form action="/records/{{ this._id }}/delete" method="POST" style="display: inline;">
+                <form action="/records/{{ this._id }}?_method=DELETE" method="POST" style="display: inline;">
                   <button type="submit" class="btn btn-danger">刪除</button>
                 </form>
               </td>
