--- a/views/edit.hbs
+++ b/views/edit.hbs
@@ -7,7 +7,7 @@
   <div class="row justify-content-center mt-3">
     <div class="col-10 col-md-8 col-lg-6">
       {{!-- form --}}
-      <form action="/records/{{ record._id }}/edit" method="POST">
+      <form action="/records/{{ record._id }}?_method=PUT" method="POST">
         <div class="mb-3 row">
           <label for="name" class="col-sm-2 col-form-label">名稱</label>
           <div class="col-sm-10">
@@ -15,7 +15,6 @@
               maxlength="25" required value="{{ record.name }}">
           </div>
         </div>
-
         <div class="mb-3 row">
           <label for="datepicker" class="col-sm-2 col-form-label">日期</label>
           <div class="col-sm-10">
@@ -23,7 +22,6 @@
               pattern="[0-9]{4}-[0-9]{2}-[0-9]{2}" title="請輸入西元年-月-日 ex: 2021-05-20" required value="{{ record.date }}">
           </div>
         </div>
-
         <div class="mb-3 row">
           <label for="category" class="col-sm-2 col-form-label">類別</label>
           <div class="col-sm-10">
