--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -8,13 +8,14 @@
   <title>expense-tracker</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
     integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
-  <script src="https://kit.fontawesome.com/bd9fea4cb5.js" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css"
+    integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
 </head>
 
 <body>
   <nav class="navbar navbar-light bg-primary">
     <div class="container-fluid">
-      <a class="navbar-brand text-light" href="/">家庭記帳本</a>
+      <a class="navbar-brand text-light" href="/">老爸的私房錢</a>
     </div>
   </nav>
 
