--- a/views/new.hbs
+++ b/views/new.hbs
@@ -29,11 +29,9 @@
           <div class="col-sm-10">
             <select class="form-select" aria-label=".form-select" name="category" id="category" required>
               <option selected disabled>請選擇類別</option>
-              <option value="meals">餐飲食品 </option>
-              <option value="traffics">交通出行</option>
-              <option value="entertainments">休閒娛樂</option>
-              <option value="living">家居物業</option>
-              <option value="others">其他</option>
+              {{#each categoryList}}
+              <option value={{this.name}}>{{this.name}}</option>
+              {{/each}}
             </select>
           </div>
         </div>
