--- a/views/edit.hbs
+++ b/views/edit.hbs
@@ -27,12 +27,10 @@
           <div class="col-sm-10">
             <select class="form-select" aria-label=".form-select" name="category" id="category" required>
               <option disabled>請選擇類別</option>
-              <option value="meals" {{#if (eq record.category 'meals' )}} selected {{/if}}>餐飲食品 </option>
-              <option value="traffics" {{#if (eq record.category 'traffics' )}} selected {{/if}}>交通出行</option>
-              <option value="entertainments" {{#if (eq record.category 'entertainments' )}} selected {{/if}}>休閒娛樂
+              {{#each categoryList}}
+              <option value={{this.name}} {{#ifEqual this.name ../record.category}}selected{{/ifEqual}}>{{this.name}}
               </option>
-              <option value="living" {{#if (eq record.category 'living' )}} selected {{/if}}>家居物業</option>
-              <option value="others" {{#if (eq record.category 'others' )}} selected {{/if}}>其他</option>
+              {{/each}}
             </select>
           </div>
         </div>
