--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -15,7 +15,13 @@
 <body>
   <nav class="navbar navbar-light bg-primary">
     <div class="container-fluid">
-      <a class="navbar-brand text-light" href="/">老爸的私房錢</a>
+      <a class="navbar-brand text-light" href="/">
+      {{#if isAuthenticated}}{{ user.name}}的 {{/if}}記帳本</a>
+      {{#if isAuthenticated}}
+      <a href="/users/logout" class="btn btn-outline-light">Logout</a>
+      {{else}}
+      <a href="/users/login" class="btn btn-outline-light">Login</a>
+      {{/if}}
     </div>
   </nav>
 
