--- a/views/edit.hbs
+++ b/views/edit.hbs
@@ -15,13 +15,15 @@
               maxlength="25" required value="{{ record.name }}">
           </div>
         </div>
+
         <div class="mb-3 row">
-          <label for="datepicker" class="col-sm-2 col-form-label">日期</label>
+          <label for="datePicker" class="col-sm-2 col-form-label">日期</label>
           <div class="col-sm-10">
-            <input type="text" id="datepicker" name="date" class="form-control" placeholder="請選擇日期"
-              pattern="[0-9]{4}-[0-9]{2}-[0-9]{2}" title="請輸入西元年-月-日 ex: 2021-05-20" required value="{{ record.date }}">
+            <input type="date" id="datePicker" name="date" class="form-control" placeholder="請選擇日期" min="2010-01-01"
+              value="{{date}}" required>
           </div>
         </div>
+
         <div class="mb-3 row">
           <label for="category" class="col-sm-2 col-form-label">類別</label>
           <div class="col-sm-10">
