--- a/views/new.hbs
+++ b/views/new.hbs
@@ -17,10 +17,10 @@
         </div>
 
         <div class="mb-3 row">
-          <label for="datepicker" class="col-sm-2 col-form-label">日期</label>
+          <label for="datePicker" class="col-sm-2 col-form-label">日期</label>
           <div class="col-sm-10">
-            <input type="text" id="datepicker" name="date" class="form-control" placeholder="請選擇日期"
-              pattern="[0-9]{4}-[0-9]{2}-[0-9]{2}" title="請輸入西元年-月-日 ex: 2021-05-20" required>
+            <input type="date" id="datePicker" name="date" class="form-control" placeholder="請選擇日期" min="2010-01-01"
+              value="{{date}}" required>
           </div>
         </div>
 
@@ -28,13 +28,15 @@
           <label for="category" class="col-sm-2 col-form-label">類別</label>
           <div class="col-sm-10">
             <select class="form-select" aria-label=".form-select" name="category" id="category" required>
-              <option selected disabled>請選擇類別</option>
+              <option disabled> 請選擇類別</option>
               {{#each categoryList}}
               <option value={{this.name}}>{{this.name}}</option>
               {{/each}}
             </select>
           </div>
         </div>
+
+
         <div class="mb-3 row">
           <label for="name" class="col-sm-2 col-form-label">金額</label>
           <div class="col-sm-10">
@@ -42,6 +44,8 @@
               placeholder="請輸入金額 1~100000000">
           </div>
         </div>
+
+
         <div class="d-flex justify-content-end">
           <a href="/" class="btn btn-secondary me-2">返回</a>
           <button type="submit" class="btn btn-primary">新增</button>
